# llmaudit

./: README.md  pyproject.toml
llmaudit/: cli.py  report_template.html  scan_github_repos.py  sprawl.py
